# byteseries

./: .gitignore  Cargo.toml  rustfmt.toml  test_append.byteseries  test_append.byteseries_index  test_append_hashes_then_verify.byteseries  test_append_hashes_then_verify.byteseries_index  test_append_timestamps_then_verify.byteseries  test_append_timestamps_then_verify.byteseries_index  test_beyond_range.byteseries  test_beyond_range.byteseries_index  test_combiner_diff_linear.byteseries  test_combiner_diff_linear.byteseries_index  test_combiner_diff_linear_mean.byteseries  test_combiner_diff_linear_mean.byteseries_index  test_combiner_diff_sine.byteseries_index  test_combiner_mean.byteseries  test_read_skipping_then_verify.byteseries  test_read_skipping_then_verify.byteseries_index
assets/reported_crash1/: mhz14.byteseries  mhz14.byteseries_index  mhz14_None_10.byteseries  mhz14_None_10.byteseries_index  mhz14_None_100.byteseries  mhz14_None_100.byteseries_index  mhz14_None_1000.byteseries  mhz14_None_1000.byteseries_index
assets/reported_crash2/: sps30.byteseries  sps30.byteseries_index  sps30.current_error
byteseries-test-support/: Cargo.toml
byteseries-test-support/src/: lib.rs
examples/: 100d.rs  convert.rs  downsample.rs  fuzz.rs  main.rs  mean.rs  read.rs  skip.rs
examples/data/: 4.h  4.yaml
src/: builder.rs  byteseries.rs  combiners.rs  data.rs  error.rs  file.rs  header.rs  index.rs  lib.rs  read.rs  sampler.rs  search.rs  seek.rs  series.rs  test.rs  util.rs
src/byteseries/: data.rs  downsample.rs
src/byteseries/data/: index.rs  inline_meta.rs
src/byteseries/downsample/: resample.rs
src/data/: inline_meta.rs
src/index/: restore.rs
src/sampler/: builder.rs  combiners.rs  decoders.rs  mod.rs
src/seek/: estimate.rs
src/series/: data.rs  downsample.rs  file_header.rs
src/series/data/: index.rs  inline_meta.rs
tests/: append.rs  combine.rs  downsample.rs  fuzz_errors.rs  header.rs  index.rs  read.rs  repair_data.rs  repair_downsampled.rs  repair_index.rs  reported_crash1.rs  reported_crash2.rs  resample.rs  seek.rs  shared.rs
tests/assets/: problematic_file.byteseries  problematic_file.byteseries_index
(+9 files in other folders)
