[package]
name = "byteseries"
version = "0.4.0"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
arraydeque = "0.5"
tracing = "0.1.40"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
itertools = "0.13.0"
pretty_assertions = "1.4.0"

[dev-dependencies]
fxhash = "0.2"
float_eq = "1.0"
temp-dir = "0.1.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
