[package]
name = "byteseries"
version = "0.7.1"
authors = ["David Kleingeld <dskleingeld@gmail.com>"]
edition = "2021"
resolver = "2"

[features]
smallvec = ["dep:smallvec"]
default = ["smallvec"]

[dependencies]
thiserror = "1.0"
num-traits = "0.2"
arraydeque = "0.5"
tracing = "0.1.40"
ron = "0.8.1"
serde = { version = "1.0.203", features = ["derive"] }
itertools = "0.13.0"
smallvec = { version = "2.0.0-alpha.6", optional = true }

[dev-dependencies]
temp-dir = "0.1.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pretty_assertions = "1.4.0"
rstest = "0.21.0"
rstest_reuse = "0.7.0"
tracing-error = "0.2.0"
copy_dir = "0.1.3"
indicatif = "0.17.9"
