[package]
name = "byteseries-test-support"
version = "0.1.0"
edition = "2021"

[dependencies]
byteseries = { path = "../" }

temp-dir = "0.1.13"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
pretty_assertions = "1.4.0"
rstest = "0.21.0"
rstest_reuse = "0.7.0"
tracing-error = "0.2.0"
copy_dir = "0.1.3"
indicatif = "0.17.9"
color-eyre = "0.6.3"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
rand_distr = "0.5.1"
